# autoresearcherUI

./: .gitignore  LICENSE  README.md  RUNBOOK.md  deploy.sh  dev.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
arui/: __init__.py
backend/: __init__.py  main.py
backend/app/: __init__.py  agent.py  agent_watcher.py  api.py  archive.py  auth.py  authkeys.py  author_agent.py  bus.py  charts.py  config.py  council.py  db.py  directives.py  experiment_isolation.py  interrupt.py  kill_criteria.py  lifecycle.py  lit_agent.py  maintenance.py  metrics.py  models.py  monitor.py  notify.py  novelty.py  orchestrator.py  pane_stream.py  paper.py  paper_compile.py  paper_gantt.py  paper_lint.py  paper_phase.py  paper_render.py  paper_runner.py  paper_watcher.py  pi.py  purpose.py  realrun.py  repo.py  scoping.py  (+9 more)
docs/: 01-product-overview.md  02-architecture.md  03-installation-and-node-setup.md  04-onboarding-and-agent-bootstrap.md  05-autoresearch-engine.md  06-experiment-tracking.md  07-dashboard-ui.md  09-notifications-and-security.md  11-refinements-v0.2.md  12-analysis-v2-spec-final.md  12-analysis-v2-spec.md  13-paper-mode-spec-v3.md  README.md  external-review-analysis-v2-gemini.md  external-review-analysis-v2-openai.md  external-review-paper-mode-gemini.md
docs/agent_prompts/: 02-architecture.md  03-installation-and-node-setup.md  04-onboarding-and-agent-bootstrap.md  08-api-and-data-models.md  10-roadmap-and-milestones.md  13-paper-mode-spec-final.md  13-paper-mode-spec.md  RUNBOOK.md  external-review-gemini.md  external-review-openai.md  external-review-paper-mode-openai.md  program_template.md.j2  redesign-plan-v0.3.md  setup_prompt.md.j2
docs/screenshots/: regenerate.py
outputs/: consult_analysis_v2.py
tests/: e2e_full.py  e2e_realagent_test.py  e2e_supervisor_test.py  e2e_test.py  mock_claude.py  run_e2e.sh
tests/example_project/: ideas.md  prepare.py  program.md  train.py
tests/unit/: conftest.py  test_agent_alive.py  test_agent_consent.py  test_agent_watcher.py  test_api.py  test_api_halt.py  test_archive_workspace.py  test_auth.py  test_auto_conclude_handoff.py  test_baseline_picker.py  test_bus_nan.py  test_completion_final_metrics.py  test_council.py  test_council_codebase.py  test_council_validator.py  test_cpu_only_mode.py  test_db.py  test_debate_adversarial.py  test_default_metrics.py  test_digest_council_health.py  test_directives.py  test_experiment_isolation.py  test_health.py  test_interrupt.py  test_kill_criteria.py  test_lit_agent.py  test_maintenance.py  test_metric_aliasing.py  test_metric_coverage.py  test_metric_field.py  test_models.py  test_monitor.py  test_notify.py  test_novelty.py  test_pane_stream.py  test_paper.py  (+50 more)
(+18 files in other folders)
