[project]
name = "autoresearcherui"
version = "0.1.0"
description = "Autoresearcher + wandb + datadog + overleaf + claude code. All local, all free, no API keys."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "duckdb>=0.10",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "psutil>=5.9",
    "matplotlib>=3.7",
    # httpx is needed by starlette.testclient (used by /api/* endpoints'
    # built-in test client). Including it in the base deps means a fresh
    # `pip install -e .` is enough to run tests/unit/ + tests/e2e_full.py.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",   # tests/unit/test_auth.py marks middleware coroutines
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
autoresearcherui = "backend.main:run"

[tool.setuptools]
packages = ["backend", "backend.app", "arui"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
